<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/supplier_edit_layout">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/supplier_edit_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <EditText
            android:transitionName="title"
            android:id="@+id/supplier_edit_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/activity_supplier_edit_name"
            android:textSize="24sp"
            android:inputType="textCapSentences"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/supplier_edit_toolbar" />

        <EditText
            android:id="@+id/supplier_edit_postalcode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:textSize="18sp"
            android:hint="@string/activity_supplier_edit_postal_code"
            android:inputType="textPostalAddress|textCapCharacters"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/supplier_edit_city"
            app:layout_constraintTop_toBottomOf="@+id/supplier_edit_name" />

        <EditText
            android:id="@+id/supplier_edit_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:textSize="18sp"
            android:hint="@string/activity_supplier_edit_city"
            android:inputType="text|textCapWords"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/supplier_edit_name" />

        <EditText
            android:id="@+id/supplier_edit_streetname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:textSize="18sp"
            android:hint="@string/activity_supplier_edit_streetname"
            android:inputType="text|textCapSentences"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/supplier_edit_city" />

        <EditText
            android:id="@+id/supplier_edit_housenumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:textSize="18sp"
            android:hint="@string/activity_supplier_edit_housenumber"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/supplier_edit_streetname"
            app:layout_constraintTop_toBottomOf="@+id/supplier_edit_postalcode"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/supplier_edit_phonenumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:textSize="18sp"
            android:hint="@string/activity_supplier_edit_phonenumber"
            android:inputType="phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/supplier_edit_streetname" />

        <EditText
            android:id="@+id/supplier_edit_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:textSize="18sp"
            android:hint="@string/activity_supplier_edit_mail"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/supplier_edit_phonenumber" />

        <EditText
            android:id="@+id/supplier_edit_webaddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:textSize="18sp"
            android:hint="@string/activity_supplier_edit_website"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/supplier_edit_email" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>